--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -2,11 +2,28 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
+{% block head_title %}{% trans "Envoi email" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
+{% block content_base %}
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+<section class="portfolio">
+     <div class="container">                                 
+        <div class="row ">
 
+            <div class="col-md-offset-2 col-md-8">
+
+			    <h4>{% trans "Vérifier votre adresse e-mail" %}</h4>
+
+			    <p>{% blocktrans %}
+			    	Pour finaliser votre inscription nous vous prions de cliquer sur le lien que nous venons de vous envoyer à votre adresse e-mail. 
+			    </p>
+			    
+			    <p>Consultez votre dossier de spams pour vérifier que le message envoyé ne s'y trouve pas. 
+				Si vous ne recevez toujours pas l'e-mail, veuillez nous contacter
+
+			    {% endblocktrans %}</p>
+			</div>  
+        </div>  
+    </div>
+</section>   
 {% endblock %}
