--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -52,9 +52,9 @@
 
    <div class="main_mix_content padding">
 
-        <div id="mixcontent" class="mixcontent row">
+        <div class="mixcontent row">
         {% for post in posts %}
-            <div class="col-md-12 mix cat1">
+            <div class="col-md-12">
 
 
                 <div class="single_mixi_portfolio margin-bottom-40">
