--- a/templates/recipe/recipe_list.html
+++ b/templates/recipe/recipe_list.html
@@ -44,9 +44,9 @@
  		
     <div class="main_mix_content text-center padding">
 
-        <div id="mixcontent" class="mixcontent row">
+        <div class="mixcontent row">
         {% for recipe in recipes %}
-            <div class="col-md-6 mix cat1">
+            <div class="col-md-6">
                 <div class="single_mixi_portfolio margin-bottom-40">
                     <div class="view hm-zoom">
            
@@ -108,11 +108,11 @@
                         <!-- <div class="modal-body">
                         </div> -->
                         <div class="modal-footer">
-                            <a class="btn-floating btn-sm-full fb-bg"><i class="fa fa-facebook"> </i></a>
-                            <a class="btn-floating btn-sm-full tw-bg"><i class="fa fa-twitter"> </i></a>
-                            <a class="btn-floating btn-sm-full in-bg"><i class="fa fa-instagram"> </i></a>
-                            <a class="btn-floating btn-sm-full gplus-bg"><i class="fa fa-google-plus"> </i></a>
-                            <a class="btn-floating btn-sm-full li-bg"><i class="fa fa-linkedin"> </i></a>
+                            <ul class="social-link list-inline">
+                                <li><a href="" class="btn-floating facebook"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="" class="btn-floating twitter"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="" class="btn-floating gplus"><i class="fa fa-google-plus"></i></a></li>
+                           </ul>
                             
                             
                         </div>
