--- a/templates/recipe/video_list.html
+++ b/templates/recipe/video_list.html
@@ -44,9 +44,9 @@
         
     <div class="main_mix_content text-center padding">
 
-        <div id="mixcontent" class="mixcontent row">
+        <div class="mixcontent row">
         {% for video in videos %}
-            <div class="col-md-6 mix cat1">
+            <div class="col-md-6">
                 <div class="single_mixi_portfolio margin-bottom-40">
                     {% video video.video as video %}
                         {% video video '340 x 260'  %}
