--- a/templates/restaurant/restaurant_list.html
+++ b/templates/restaurant/restaurant_list.html
@@ -8,51 +8,32 @@
 {% block slide %}
 
     <section id="home" class="home">
-        <div class="overlay">
+
+      <!--   <div class="overlay">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 ">
                         <div class="main_home_slider">
                             <div class="single_home_slider">
-                                <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                    <h1>Cook' iT</h1>
-                                    <p class="subtitle">Découvir, Cuisiner, Savourer</p>
+                                <div class="main_home wow"> -->
+                                    <!-- <h1>Cook' iT</h1> -->
+                                    <img src="{% static 'assets/images/food_1.jpg' %}">
+                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
 
                                     <div class="home_btn">
                                         <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div>
-
+                                    </div> -->
+<!-- 
                                 </div>
                             </div>
-                            <div class="single_home_slider">
-                                <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                    <h1>Cook' iT</h1>
-                                    <p class="subtitle">Cuisiner</p>
-
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="single_home_slider">
-                                <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                    <h1>Cook' iT</h1>
-                                    <p class="subtitle">Savourer</p>
-
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div>
-
-                                </div>
-                            </div>
+                            
+                            
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
-
 {% endblock slide %}
 
 {% block header %}
@@ -66,12 +47,10 @@
 
     {% for restaurant in restaurants %}                
                       
-        <div id="mixcontent" class="mixcontent row">
-          
-
-                      
+        <div class="mixcontent row">
+                        
            
-            <div class="mix cat1 margin-bottom-20">
+            <div class="margin-bottom-20">
                 
                     
                     <div class="col-sm-5">
