--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends 'base_principal.html' %}
+{% extends 'base.html' %}
 {% load staticfiles %}
 {% load thumbnail %}
 {% load widget_tweaks %}
@@ -9,10 +9,9 @@
 {% providers_media_js %}
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-
 {% block slide %}
-  
-    <section id="home" class="home">
+   
+<section id="home" class="home">
     
       <!--   <div class="overlay">
             <div class="container">
@@ -22,7 +21,7 @@
                             <div class="single_home_slider">
                                 <div class="main_home wow"> -->
                                     <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/blog.jpg' %}">
+                                    <img src="{% static 'assets/images/food_1.jpg' %}">
                                     <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
 
                                     <div class="home_btn">
@@ -46,9 +45,9 @@
    
 {% endblock header %}
 
-{% block content%}
+{% block content_base %}
 
-   <h4>Login with:</h4>
+ <!--   <h4>Login with:</h4>
                
                 <ul class="list-inline">
                   
@@ -68,15 +67,6 @@
                       {{ hidden }}
                     {% endfor %}
 
-                   <!--  {% for field in form.visible_fields %}
-                      <div class="form-group">
-                        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                        {{ field|add_class:'form-control' }}
-                        {% for error in field.errors %}
-                          <span class="help-block">{{ error }}</span>
-                        {% endfor %}
-                      </div>
-                    {% endfor %} -->
                    
                       <div class="form-group">
                           
@@ -98,127 +88,126 @@
                   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                   {% endif %}
                   <input class="btn btn-sm btn-primary" type="submit" value="Log in">
-                  
-                  </form>
+                                  </form> -->
 
+<section class="portfolio">
+     <div class="container">                                 
+        <div class="row ">
 
-{% endblock %}
+            <div class="col-md-offset-4 col-md-4">
+                <div class="login">
+                    <h4 class="text-center">Login with</h4>
+                            
+                      <div class="box">
+                           <div class="content">
+                                <div class="social">
+                                    <a  href="{% url 'google_login' %}"  class="circle google">
+                                      <i class="fa fa-google-plus fa-fw"></i>
+                                    </a>
+                                    <a href="{% provider_login_url "facebook" method="oauth2" %}"  class="circle facebook" >
+                                      <i class="fa fa-facebook fa-fw"></i>
+                                    </a>
+                                </div>
 
-{% block content_base %}
- <!-- Post -->
-  <section class="rp-form">
-    <div class="row ">
-        <div class="col-lg-6">
-          <h3>Don't have an account yet</h3>
-          <hr>
-          <p> Click here to create an acccount  <br><br>
-          <a class="btn waves-effect waves-light" href="{% url 'account_signup' %}" style="background: #fff;">Sign up</a></p>
-          <div class="form-container register-form">
-
-          </div>
-        </div>
-
-        <div class="col-lg-6">    
-        <div class="form-container login-form card text-center">
-                <h4>Login with:</h4>
-               
-                <ul class="list-inline">
-                  
-                  <li> <a href="{% provider_login_url "facebook" method="oauth2" %}" class="btn-floating btn-lg-full fb-bg"><i class="fa fa-facebook"> </i></a>
-                  </li>
-                  <li><a href="{% url 'google_login' %}" class="btn-floating btn-lg-full gplus-bg"><i class="fa fa-google-plus"> </i></a></li>
-                  <li><a class="btn-floating btn-lg-full tw-bg"><i class="fa fa-twitter"></i></a></li>
-                  
-                </ul>
-                <h4>Or use your email </h4>
-                
-                <form role="form" method="POST" action="{% url 'account_login' %}">
-                    
-                  {% csrf_token %}
-                  
-                   {% for hidden in form.hidden_fields %}
-                      {{ hidden }}
-                    {% endfor %}
-
-                   <!--  {% for field in form.visible_fields %}
-                      <div class="form-group">
-                        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                        {{ field|add_class:'form-control' }}
-                        {% for error in field.errors %}
-                          <span class="help-block">{{ error }}</span>
-                        {% endfor %}
-                      </div>
-                    {% endfor %} -->
-                   
-                      <div class="form-group">
-                          
+                            <div class="division">
+                                <div class="line l"></div>
+                                    <span>or</span>
+                                <div class="line r"></div>
+                                <h4 class="text-center">Use your email </h4>
+                            </div>
                               
-                              {{ form.login |add_class:'form-control'}}
-                              <span class="help-block">{{ form.login.error }}</span>
-                         
-                      </div>
-                      <div class="form-group">
-                         
-                             
-                              {{ form.password |add_class:'form-control'}} 
-                              <span class="help-block">{{ form.password.error }}</span>
-                      </div>
-                     
+                            <div class="form loginBox">
+                                <form method="POST" action="{% url 'account_login' %}">
+                                      {% csrf_token %}
+
+                                      {% if form.errors %}
+                                        {% for field in form %}
+                                            {% for error in field.errors %}
+                                                <div class="alert alert-error">
+                                                    <strong>{{ error|escape }}</strong>
+                                                </div>
+                                            {% endfor %}
+                                        {% endfor %}
+                                        {% for error in form.non_field_errors %}
+                                            <div class="alert alert-error">
+                                                <strong>{{ error|escape }}</strong>
+                                            </div>
+                                        {% endfor %}
+                                    {% endif %}
+                          
+                                    {% for hidden in form.hidden_fields %}
+                                      {{ hidden }}
+                                    {% endfor %}
+
+                                   
+                                    <div class="form-group">
+                                  
+                                        {{ form.login |add_class:'form-control'}}
+                                        <span class="help-block">{{ form.login.error }}</span>
+                                     
+                                    </div>
+                                    <div class="form-group">
+                                     
+                                        {{ form.password |add_class:'form-control'}} 
+                                        <span class="help-block">{{ form.password.error }}</span>
+                                    </div>
                                     
-                  
-                  {% if redirect_field_value %}
-                  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                  {% endif %}
-                  <input class="btn btn-sm btn-danger" type="submit" value="Log in">
-                  
-                  </form>
-                         
-              
-        </div>
+                          
+                                    {% if redirect_field_value %}
+                                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                                    {% endif %}
+                                        <input class="btn btn-sm btn-primary btn-login" type="submit" value="Log in">
+
+                                </form>
+                            </div>
+
+                            <div class="forgot login-footer">
+                                <span>Looking to 
+                                     <a href="{% url 'account_signup' %}">{% trans 'create an account' %}</a>
+                                ?</span>
+                            </div>
+                        </div>
+                    </div>
+                                  
+                </div>           
+            </div>  
+        </div>  
     </div>
-
-
-  </div>
-
-</section>
-
-
-
-
-<!-- <h1>{% trans "Sign In" %}</h1>
-
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form> -->
+</section>    
 
 {% endblock %}
+
+
+
+    <!--     <script type="text/javascript">
+          $(document).ready(function() { 
+                
+                toastr.options = {
+                  "closeButton": false,
+                  "debug": false,
+                  "newestOnTop": false,
+                  "progressBar": true,
+                  "positionClass": "toast-top-right",
+                  "preventDuplicates": false,
+                  "onclick": null,
+                  "showDuration": "300",
+                  "hideDuration": "1000",
+                  "timeOut": "5000",
+                  "extendedTimeOut": "1000",
+                  "showEasing": "swing",
+                  "hideEasing": "linear",
+                  "showMethod": "fadeIn",
+                  "hideMethod": "fadeOut"
+                 }
+
+           
+
+            });
+        </script> -->
+        
+      
+
+
+
+
+
