--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -4,12 +4,21 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block content_base %}
+<section class="portfolio">
+    <div class="container">                                 
+        <div class="row ">
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+    		<div class="col-md-offset-2 col-md-8">
+			    <h1>{% trans "Set Password" %}</h1>
+
+			    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+			        {% csrf_token %}
+			        {{ form.as_p }}
+			        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
+			    </form>
+			</div>  
+        </div>  
+    </div>
+</section>   
 {% endblock %}
