--- a/templates/base_principal.html
+++ b/templates/base_principal.html
@@ -22,12 +22,13 @@
 
 {% block content_base %}
 
-        <section id="portfolio" class="portfolio">
+        <section class="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
+                    
                         {% block content %}
-
+                        
                         {% endblock content %}
 
 
