--- a/templates/partials/messages.html
+++ b/templates/partials/messages.html
@@ -1,11 +1,8 @@
-{% if messages %}
-{% for message in messages %}
-  <div class="del-msg alert {{ message.tags }} alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    {{ message }}
-  </div>
-{% endfor %}
-{% endif  %}
-
+ {% if messages %}
+        {% for message in messages %}
+         
+          <script type="text/javascript">
+               toastr.{{message.tags }}("{{ message }}");
+          </script>
+        {% endfor %}
+        {% endif  %}
