--- a/templates/recipe/accueil.html
+++ b/templates/recipe/accueil.html
@@ -54,9 +54,9 @@
 {% block content %}
  <div class="main_mix_content text-center padding">
 
-        <div id="mixcontent" class="mixcontent row">
+        <div class="mixcontent row">
         {% for recipe in recipes %}
-            <div class="col-md-6 mix cat1">
+            <div class="col-md-6">
                 <div class="single_mixi_portfolio margin-bottom-40">
                     <div class="view hm-zoom">
            
@@ -118,7 +118,7 @@
                         <!-- <div class="modal-body">
                         </div> -->
                         <div class="modal-footer">
-                            <a class="btn-floating btn-sm-full fb-bg"><i class="fa fa-facebook"> </i></a>
+                            <a class="btn-floating btn-sm-full facebook"><i class="fa fa-facebook"> </i></a>
                             <a class="btn-floating btn-sm-full tw-bg"><i class="fa fa-twitter"> </i></a>
                             <a class="btn-floating btn-sm-full in-bg"><i class="fa fa-instagram"> </i></a>
                             <a class="btn-floating btn-sm-full gplus-bg"><i class="fa fa-google-plus"> </i></a>
