--- a/templates/userprofile/profile_update.html
+++ b/templates/userprofile/profile_update.html
@@ -1,42 +1,42 @@
 {% extends 'base_principal.html' %}
 {% load staticfiles %}
 {% load thumbnail %}
+% load i18n %}
 
+{% block slide %}
+    <section id="home" class="home">
 
-{% block slider %}
-    <div class="top-user">
-        <br>
-        <div class="col-md-8">
-            <div class="media">
+      <!--   <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 ">
+                        <div class="main_home_slider">
+                            <div class="single_home_slider">
+                                <div class="main_home wow"> -->
+                                    <!-- <h1>Cook' iT</h1> -->
+                                    <img src="{% static 'assets/images/food_1.jpg' %}">
+                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
 
-                <a class="pull-left" href="">
-                {% if request.user.profile.photo %}
-                    <!-- {% thumbnail request.user.profile.photo  "200x200" as im %}
- -->
-                    <img src="{{request.user.profile.photo.url}}"  class="img-responsive img-circle">
-                   <!--  {% endthumbnail %}   -->
-                {% else %}
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg" class="media-object img-circle img-responsive" width="" height="">
-                {% endif %}
-                
-                </a>
-                <div class="media-body">
-                <br>
-                    <h3 class="media-heading">{{request.user.first_name}} {{request.user.last_name}}</h3>
-                    <p>
-                    {{request.user.profile.bio}}
-                    </p>
-                    
+                                    <div class="home_btn">
+                                        <a href="" class="btn btn-primary">LEARN MORE</a>
+                                    </div> -->
+<!-- 
+                                </div>
+                            </div>
+                            
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-{% endblock slider %}
+        </div> -->
+    </section>
+{% endblock slide %}
 
-{% block content_base %}
+{% block content %}
  <!-- Post -->
  <div class="row">
- {% include 'partials/messages.html' %}
+ 
     <div class="col-lg-offset-2 col-lg-8">
         <section class="paper">
             <h3 class="h3-responsive text-center">Account Settings</h3>
@@ -47,7 +47,7 @@
                       {% csrf_token %}
                       {{ user_form.as_p }}
                       {{ profile_form.as_p }}
-                      <button type="submit">Save</button>
+                      <button class="btn btn-primary" type="submit">Enregister</button>
                     </form>
                 
                 </div>
@@ -55,5 +55,5 @@
         </section>
     </div>
  </div>
-{% endblock content_base %}
+{% endblock content %}
 
